# dotconfig

./: CLAUDE.md  LICENSE  README.md  claude_pipe_test.py  pyproject.toml
config/: sops.yaml
config/local/eric/: public.env  secrets.env
config/prod/: public.env  secrets.env
docs/clasi/todo/: key-management-system.md
src/dotconfig/: __init__.py  agent.py  agent_instructions.md  audit.py  cli.py  config.py  discover.py  hooks.py  init.py  keys.py  load.py  output.py  save.py
tests/: test_agent.py  test_audit.py  test_config.py  test_diff_and_split.py  test_discover.py  test_e2e.py  test_hooks.py  test_init.py  test_keys.py  test_load.py  test_save.py  test_sops_integration.py
tests/fixtures/: .gitignore  input-app-modified.yaml  input-services-modified.json
tests/fixtures/complete.source/dev/: app.yaml  public.env  secrets.env
tests/fixtures/complete.source/local/alice/: app.yaml  editor.json  public.env  secrets.env
tests/fixtures/complete.source/local/bob/: public.env
tests/fixtures/complete.source/prod/: app.yaml  public.env  secrets.env
tests/fixtures/diff-test.source/dev/: app.yaml  services.json
tests/fixtures/diff-test.source/local/alice/: app.yaml
tests/fixtures/diff-test.source/prod/: app.yaml
tests/fixtures/missing-secrets.source/dev/: public.env
tests/proj/: .env.yaml
tests/proj/config/dev/: public.env  secrets.env
tests/proj/config/local/alice/: public.env  secrets.env
tests/proj/config/local/bob/: public.env
tests/proj/config/prod/: public.env  secrets.env
