[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dotconfig"
version = "0.20260407.2"
description = "Environment configuration cascade manager for .env files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Eric Busboom" }]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "detect-secrets>=1.5.0",
]
keywords = ["dotenv", "config", "environment", "sops", "secrets"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.scripts]
dotconfig = "dotconfig.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.package-data]
dotconfig = ["*.md"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
